--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<head>
 		<meta charset=“utf-8”>
 		<meta name=“first-page” content=“Home Page”>
-		<title>Home Page</title>
+		<title>Big Five Personality</title>
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 
-	<body background="Images/shark.jpg" class="fill">
+	<body background="Images/AC14A810-D98E-4ADF-BAAC-5DB6D5E92D9C.jpeg" class="fill">
 
 		<div id="background"> <!-- this is the wrap for the whole page -->
 
@@ -25,7 +25,7 @@
 					<p><br></p>
 					<p><br></p>
 					<p><br></p>
-					<p>Take the Big Five Personality Test</p>
+					<p>Take the Big Five Personality Inventory</p>
 				</div>
 
 				<footer id="footer">
