--- a/test.html
+++ b/test.html
@@ -3,8 +3,8 @@
 
 	<head>
 		<meta charset=“utf-8”>
-		<meta name=“description” content=“Big Five Personality Test”>
-		<title>Big Five Personality Test</title>
+		<meta name=“description” content=“Big Five Personality Inventory">
+		<title>Big Five Personality Inventory</title>
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 
@@ -15,7 +15,7 @@
 			<div id="wrap">
 
 				<header id="header">
-						<h1>Big Five Personality Test</h1>
+						<h1>Big Five Personality Inventory</h1>
 				</header>
 
 				<div id="content">
