--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 
-	<body background="Images/tinnitus.jpg">	
+	<body background="Images/A1D29F00-389E-428E-8F23-FAE0EB974C4E.jpeg">	
 
 		<div id="background"> <!-- this is the wrap for the whole page -->
 
